<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#f26522"
    android:id="@+id/naviga"
   android:alpha="0.9"
    android:clickable="true"
    android:visibility="invisible"
    android:layout_height="match_parent">
    <co.jlabs.ordering.photoview.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_title"
        android:text="Menu"

        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="20dp"/>
    <co.jlabs.ordering.photoview.MyIconFonts
        android:layout_width="wrap_content"
        android:text="@string/closed"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:id="@+id/cross"
        android:textSize="20sp"
        android:textColor="#fff"
        android:padding="20dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/history"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <co.jlabs.ordering.photoview.MyIconFonts
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/history"/>
            <co.jlabs.ordering.photoview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#fff"
                android:text="Order History"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:orientation="horizontal"
            android:id="@+id/current_orders"
            android:layout_below="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <co.jlabs.ordering.photoview.MyIconFonts
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/current_orders"/>
            <co.jlabs.ordering.photoview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#fff"
                android:text="Current Order"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:orientation="horizontal"
            android:id="@+id/addres"
            android:layout_below="@+id/current_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <co.jlabs.ordering.photoview.MyIconFonts
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/address"/>
            <co.jlabs.ordering.photoview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#fff"
                android:text="Saved Address"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/feedback"
            android:layout_below="@+id/addres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <co.jlabs.ordering.photoview.MyIconFonts
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/feedback"/>
            <co.jlabs.ordering.photoview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#fff"
                android:text="Feedback"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/rateus"
            android:layout_below="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <co.jlabs.ordering.photoview.MyIconFonts
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/rating"/>
            <co.jlabs.ordering.photoview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#fff"
                android:text="Rate us"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/aboutus"
            android:layout_below="@+id/rateus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <co.jlabs.ordering.photoview.MyIconFonts
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/about_us"/>
            <co.jlabs.ordering.photoview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#fff"
                android:text="About us"/>
        </LinearLayout>
    </RelativeLayout>


    <co.jlabs.ordering.Rounded.RoundedImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/roundy"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/imga"/>
    <co.jlabs.ordering.photoview.MyTextView
        android:layout_width="wrap_content"
        android:text="Kashyap Sharma"
        android:layout_toRightOf="@+id/roundy"
        android:layout_marginBottom="45dp"
        android:padding="5dp"
        android:textColor="#fff"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />

</RelativeLayout>
   </io.codetail.widget.RevealFrameLayout>