<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/ord"
        android:layout_below="@+id/yoi">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pizza"
                android:gravity="center_vertical"
                android:textColor="#000"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/add_rem_"
                android:id="@+id/orderedItem"
                android:textSize="15sp"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pizza"
                android:layout_below="@+id/orderedItem"
                android:textColor="#000"
                android:visibility="gone"
                android:layout_alignParentLeft="true"
                android:id="@+id/itemDetail"
                android:textSize="10sp"
                android:padding="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Customizations:"
                android:layout_below="@+id/itemDetail"
                android:textColor="#000"
                android:layout_alignParentLeft="true"
                android:id="@+id/itemDetail1"
                android:textSize="10sp"
                android:padding="10dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/add_rem_"
                android:gravity="center"
                android:layout_alignParentRight="true">
                <co.jlabs.ordering.photoview.MaterialFontIcons
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#f26522"
                    android:textSize="30sp"
                    android:padding="5dp"
                    android:id="@+id/rem_des1"
                    android:text="@string/rem"/>
                <co.jlabs.ordering.photoview.MyTextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:id="@+id/totaldes1"
                    android:text="1" />
                <co.jlabs.ordering.photoview.MaterialFontIcons
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#f26522"
                    android:id="@+id/add_des1"
                    android:padding="5dp"
                    android:textSize="30sp"
                    android:text="@string/add"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemDetail1"
                android:padding="8dp"
                android:background="#f0f0f0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/p"
                    android:text="Price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="111"
                    android:id="@+id/itemDetail2"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CurrencySign"
                    android:layout_toLeftOf="@+id/itemDetail2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/p1"
                    android:layout_below="@+id/p"
                    android:text="Tax" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="111"
                    android:layout_below="@+id/itemDetail2"
                    android:id="@+id/mone1"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CurrencySign"
                    android:layout_below="@+id/itemDetail2"
                    android:layout_toLeftOf="@+id/mone1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/p2"
                    android:layout_below="@+id/p1"
                    android:text="Item Total" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="111"
                    android:layout_below="@+id/mone1"
                    android:id="@+id/mone2"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CurrencySign"
                    android:layout_below="@+id/mone1"
                    android:layout_toLeftOf="@+id/mone2" />


            </RelativeLayout>



        </RelativeLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>