<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/maina"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/up"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">


            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <FrameLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:orientation="vertical">
            />
                <com.flaviofaria.kenburnsview.KenBurnsView
                    android:id="@+id/header_picture"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/imageview_height"
                    android:src="@drawable/photo1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="for making black film on top of KenBurnsView"
                    android:background="#000000"
                    android:alpha="0.5"/>
                <ImageView
                    android:id="@+id/header_thumbnail"
                    android:layout_width="@dimen/header_logo_size"
                    android:layout_height="@dimen/header_logo_size"
                    android:src="@drawable/icon1"
                    android:layout_gravity="center"
                    />
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    >
                    <RelativeLayout
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/toolbar_height"
                        android:clickable="true"
                        android:background="@color/orange"
                        android:alpha="0">
                        <ImageView
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:id="@+id/icon"
                            android:layout_marginLeft="12dp"
                            android:layout_width="44dp"
                            android:layout_height="44dp" />
                        <TextView
                            android:text="Baking Bad"
                            android:layout_alignParentBottom="true"
                            android:textColor="#FFE07A"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="44dp" />
                    </RelativeLayout>
                    <com.ogaclejapan.smarttablayout.SmartTabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:clipToPadding="false"
                        android:paddingLeft="4dp"
                        android:background="#fff"
                        android:paddingRight="4dp"
                        app:stl_defaultTabTextColor="#ffffff"
                        app:stl_defaultTabTextHorizontalPadding="18dp"
                        app:stl_dividerColor="#fff"
                        app:stl_dividerThickness="0dp"
                        app:stl_customTabTextLayoutId="@layout/custom_tab"
                        app:stl_indicatorColor="#F88920"
                        app:stl_indicatorCornerRadius="18dp"
                        app:stl_indicatorInterpolation="smart"
                        app:stl_indicatorGravity="center"
                        app:stl_indicatorThickness="36dp"
                        app:stl_underlineColor="#f26522"
                        app:stl_underlineThickness="0dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#c4c4c4"/>

                </LinearLayout>

            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/orders_layout"
        android:orientation="horizontal">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#252525">

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:id="@+id/cart">

                <co.jlabs.ordering.photoview.MaterialFontIcons
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:typeface="serif"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:paddingLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/basket" />
                <TextView
                    android:gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:textColor="#fff"
                    android:text="0"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"

                    android:layout_marginTop="5dp"

                    android:id="@+id/orders"
                    android:layout_gravity="right"
                    android:background="@drawable/quantity"/>
            </FrameLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                android:paddingLeft="10dp"
                android:layout_margin="10dp"
                android:id="@+id/slab"
                android:layout_toRightOf="@+id/cart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/CurrencySign"
                android:layout_toRightOf="@+id/slab"
                android:textColor="#F5F5F5"
                android:id="@+id/currency"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_toRightOf="@+id/currency"
                android:textColor="#F5F5F5"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textSize="17sp"
                android:id="@+id/money_foot"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="CHECK OUT >>"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_alignParentRight="true"
                android:textColor="#F5F5F5"
                android:id="@+id/checkout"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                android:background="#111111"
                />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
<include layout="@layout/nav_drawer" />
<android.support.design.widget.FloatingActionButton
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="48dp"
android:textColor="#fff"
android:background="@android:color/transparent"
android:text="@string/menu"
android:padding="5dp"
android:id="@+id/menu"
android:layout_height="48dp"
    />
</android.support.design.widget.CoordinatorLayout>
